@@ -2,5 +2,6 @@ AUX nm-applet-0.6.5-confchanges.patch 978 RMD160 4e506d4653affb6d01902c40100ebb2
 AUX nm-applet-changeconf.patch 744 RMD160 b8af24f321d60622a9261069de4345614ccb4ad7 SHA1 13f25342c0902252731fcb0b0b92f3c23d10d0f0 SHA256 4b2c353ebe35f11e8d54d99c76b1c9c44b8acebe257b038c38c55e7f8a01df3d
 DIST nm-applet-20081006.tar.gz 1378701 RMD160 43abc21f0f7fb8f2ef327bf36f9e7db949303cdc SHA1 03bd71bf8df0a7974f95592648721c3cc6411d3e SHA256 a78f71f7d46da633a436fabde4efade6eefab67a7afa3a2eb8c8131fec99dbb2
 EBUILD nm-applet-20081006.ebuild 1681 RMD160 f0dbe1be0d46a89c4a8ecafb357cd8903d1bad4f SHA1 b864a78edb6d864353ea6e56e82ea7b7117baad5 SHA256 d2b596c0bfd22c943f8dabfd270c479ce4fcf272d061b60263ff8394e7762656
-MISC ChangeLog 3963 RMD160 ba6d007b02e8ab381fc9579a24f9251f05e4fed3 SHA1 5e8615ef134541b355b2765d9c0fd24b4096b3b4 SHA256 6b28b45958eb7860b04d55595c70dadb4f0d8568ea02392ab8eeb8482436f19e
+EBUILD nm-applet-9999.ebuild 1768 RMD160 5027a47e8be1c892a50ca97bbd2306429f1bc286 SHA1 5836c8f39df93fe4ee486a56842eb9f5e78bace3 SHA256 2f16140ee7e3af498a316f08be87e37904915cffed11d2570435ea0666b15e63
+MISC ChangeLog 4067 RMD160 5c74e5703088f5d27718bc4cbff37c4c5d57946a SHA1 9b635c540a1b7365717c9d6f44230c22ca4ab912 SHA256 0b2bb86789dd1c1ed819efbaaaae75c3cf768a62b168638c615239e378cf555b
 MISC metadata.xml 260 RMD160 3bd2ac88342783f1ced38fe5de95da8d94db7c1c SHA1 7bcafc6b129a5890b55be1edf868f2e8751e7307 SHA256 94e8a0c83eb641ff321069cd9c7ee00744ffecb329ff14dc3a76773a8d2e228c
