@@ -2,6 +2,10 @@
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
 # $Header: /var/cvsroot/gentoo-x86/gnome-extra/nm-applet/ChangeLog,v 1.20 2008/08/17 16:15:22 maekke Exp $
 
+  02 Nov 2008; Frédéric Lietart <thelinuxfr@free.fr>
+  +nm-applet-9999.ebuild:
+  Import from #235330
+
   04 Oct 2008; Frédéric Lietart <thelinuxfr@free.fr> ChangeLog:
   Upstream SVN version 7.0
 
